syntax = "proto3";

package rivet.backend.pkg.mm.msg.lobby_find_fail;

import "proto/common.proto";
import "proto/backend/matchmaker/lobby_find.proto";

/// name = "msg-mm-lobby-find-fail"
/// deduplicate = true
/// parameters = [
/// 	{ name = "namespace_id" },
/// 	{ name = "query_id" },
/// ]
message Message {
	rivet.common.Uuid namespace_id = 1;
	rivet.common.Uuid query_id = 2;
	rivet.backend.matchmaker.lobby_find.ErrorCode error_code = 3;
}

